Added batch admin presentation module